[package]
name = "hubakc"
version = "0.1.5"
edition = "2021"
description = "Authorize an ssh session using your keys on GitHub."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.6.0", features = ["https-native", "proxy"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
anyhow = "1.0.66"
itertools = "0.10.5"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
