[package]
name = "hubakc"
version = "0.1.9"
edition = "2021"
description = "Authorize an ssh session using your keys on GitHub."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.12.0", features = ["https-rustls", "proxy"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["parse"] }
anyhow = "1"
itertools = "0.13.0"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
